--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
   "license": "ISC",
   "packageManager": "pnpm@10.13.1",
   "devDependencies": {
-    "typescript": "^5.9.2",
-    "vitest": "^1.6.0",
-    "@types/node": "^20.14.2",
-    "@types/js-yaml": "^4.0.9",
     "@types/glob": "^8.1.0",
-    "memfs": "^4.9.2"
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.14.2",
+    "memfs": "^4.9.2",
+    "typescript": "^5.9.2",
+    "vitest": "^1.6.0"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.17.3",
     "dotprompt": "^1.1.1",
+    "glob": "^10.4.1",
     "js-yaml": "^4.1.0",
-    "glob": "^10.4.1"
+    "zod": "^4.0.17"
   }
 }
