feat: Add shell-utils for robust command execution
Introduces a new `shell-utils` module to provide a consistent and robust way to execute shell commands, both synchronously and asynchronously.

- `sh` (async): Uses `spawn` to provide interleaved stdout/stderr, which is useful for long-running commands or when the order of output matters.
- `shSync` (sync): A wrapper around `spawnSync` for simple synchronous commands.

Refactored `go.ts` language adapter and `prompt-helpers.ts` to use the new shell utilities, simplifying error handling and output processing.

Also includes comprehensive tests for the new `shell-utils` module and updates to existing tests to reflect the changes.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "vitest",
+    "test": "pnpm run build && pnpm exec vitest",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "prepare": "npm run build"
