feat: update `up` command to support new Gemini CLI config
The `up` command has been updated to align with the deprecation of workspace extensions in the Gemini CLI.

The new implementation:
- Generates system instructions into a `DOTGUIDES.md` file in the workspace root.
- Reads and updates `.gemini/settings.json` to include `DOTGUIDES.md` in the context and to add the dotguides MCP server.
- No longer creates the `.gemini/extensions/dotguides` directory or `gemini-extension.json`.

Also includes a minor update to the test script in `package.json` to use `tsc --noEmit`.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "pnpm run build && pnpm exec vitest",
+    "test": "pnpm tsc --noEmit && pnpm exec vitest",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "prepare": "npm run build"
