feat: Refactor CLI to separate bin entrypoint
This refactors the CLI to have a dedicated `src/bin/cli.ts` entrypoint.

This was done to simplify testing and make the code more modular. The previous implementation had a conditional check in `src/cli/index.ts` to determine if it was being run as a script or imported. This change moves the script execution logic to `src/bin/cli.ts` and leaves `src/cli/index.ts` as a library file.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "dotguides",
-  "version": "0.1.0-preview.1",
+  "version": "0.1.0-preview.2",
   "type": "module",
   "description": "",
   "main": "dist/index.js",
   "bin": {
-    "dotguides": "dist/cli/index.js"
+    "dotguides": "dist/bin/cli.js"
   },
   "files": [
     "dist"
