--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
+    "@clack/prompts": "^0.11.0",
     "@modelcontextprotocol/sdk": "^1.17.3",
     "@types/semver": "^7.7.0",
     "dotprompt": "^1.1.1",
