--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "packageManager": "pnpm@10.13.1",
   "devDependencies": {
     "@types/glob": "^8.1.0",
+    "@types/ini": "^4.1.1",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.14.2",
     "memfs": "^4.9.2",
@@ -34,8 +35,10 @@
     "@types/semver": "^7.7.0",
     "dotprompt": "^1.1.1",
     "glob": "^10.4.1",
+    "ini": "^5.0.0",
     "js-yaml": "^4.1.0",
     "semver": "^7.7.2",
+    "smol-toml": "^1.4.2",
     "zod": "^4.0.17"
   }
 }
