chore: version bump, small updates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dotguides",
-  "version": "0.1.0-preview.5",
+  "version": "0.1.0",
   "type": "module",
   "description": "",
   "main": "dist/index.js",
