feat(swift): Implement toolchain-free Swift project discovery
This commit refactors the SwiftLanguageAdapter to discover dependencies in Swift projects without requiring the Swift toolchain to be installed.

- For Xcode projects, the adapter now uses the @bacons/xcode npm package to parse the project.pbxproj file directly, instead of shelling out to xcodebuild. This allows for the discovery of both local and remote package dependencies in a more robust and environment-independent way.

- For SwiftPM projects, the adapter now uses a regular expression to parse Package.swift files and extract dependencies. This 'good enough' approach avoids the need to shell out to swift package dump-package.

- The DerivedData path is now configurable, and the adapter will perform a targeted search for downloaded packages within it, improving performance.

- The tests have been updated to use a mock DerivedData folder and a realistic test fixture, ensuring that the new implementation is well-tested and isolated from the user's local environment.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vitest": "^1.6.0"
   },
   "dependencies": {
+    "@bacons/xcode": "^1.0.0-alpha.27",
     "@clack/prompts": "^0.11.0",
     "@modelcontextprotocol/sdk": "^1.17.3",
     "@types/semver": "^7.7.0",
