feat: Support for Swift projects (#6)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ package-lock.json
 firebase-debug.log
 .firebase
 .genkit
+.DS_Store
+/testing/swift/dummy-package/build
+/testing/swift/Dummy1/build
